RESOLVED FIXED225129
Get the bytecode profiler working again
https://bugs.webkit.org/show_bug.cgi?id=225129
Summary Get the bytecode profiler working again
Filip Pizlo
Reported 2021-04-27 17:27:31 PDT
It was crashing with an assert
Attachments
the patch (2.63 KB, patch)
2021-04-27 17:29 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2021-04-27 17:29:30 PDT
Created attachment 427220 [details] the patch
EWS
Comment 2 2021-04-27 18:01:25 PDT
Committed r276686 (237100@main): <https://commits.webkit.org/237100@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 427220 [details].
Radar WebKit Bug Importer
Comment 3 2021-04-27 18:02:21 PDT
Note You need to log in before you can comment on or make changes to this bug.