Get the bytecode profiler working again https://bugs.webkit.org/show_bug.cgi?id=225129

Reviewed by Saam Barati.

The bytecode profiler was broken because it was trying to look at unset labels. This patch
improves our label discipline a bit so we don't try to look at unset labels.

* dfg/DFGJITCompiler.cpp:
(JSC::DFG::JITCompiler::linkOSRExits):
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::emitInvalidationPoint):


Canonical link: https://commits.webkit.org/237100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276686 268f45cc-cd09-0410-ab3c-d52691b4dbfc